feat(things): admin component in process